2021-02-25  Jay Berkenbilt  <ejb@ql.org>

	* Bug fix/behavior change: when QPDF::replaceObject or
	QPDF::swapObjects is called, existing QPDFObjectHandle instances
	will now notice the change. This removes a long-standing source of
	bugs and confusing behavior.

2021-02-23  Jay Berkenbilt  <ejb@ql.org>

	* 10.2.0: release

	* The test for the input and output files being the same wasn't
	implemented correctly for --split-pages since the specified output
	file is really a pattern, not the actual output file.

2021-02-22  Jay Berkenbilt  <ejb@ql.org>

	* From qpdf CLI, --pages and --split-pages will properly preserve
	interactive form functionality. Fixes #340.

	* Add QPDFAcroFormDocumentHelper::copyFieldsFromForeignPage to
	copy form fields from a foreign page into the current file.

	* Add QPDFFormFieldObjectHelper::getTopLevelField to get the
	top-level field for a given form field.

	* Update pdf-overlay-page example to include copying of
	annotations.

	* Add a new version of QPDFPageObjectHelper::placeFormXObject that
	initializes the transformation matrix that was used so you don't
	have to call both placeFormXObject and
	getMatrixForFormXObjectPlacement.

2021-02-21  Jay Berkenbilt  <ejb@ql.org>

	* From qpdf CLI, --overlay and --underlay will copy annotations
	and form fields from overlay/underlay file. Fixes #395.

	* Add QPDFPageObjectHelper::copyAnnotations, which copies
	annotations and, if applicable, associated form fields, from one
	page to another, possibly transforming the rectangles.

	* Bug fix: --flatten-rotation now applies the required
	transformation to annotations on the page.

	* Add QPDFAcroFormDocumentHelper::transformAnnotations to apply a
	transformation to a group of annotations.

	* Add QPDFObjGen::unparse()

	* Add QPDFObjectHandle::copyStream() for making a copy of a stream
	within the same QPDF instance.

	* Allow QPDFObjectHandle::newArray and
	QPDFObjectHandle::newFromMatrix take QPDFMatrix as well as
	QPDFObjectHandle::Matrix
